Added Open source code

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
           </div>
         </div>
       </div>
+      <small>
+        <a href="https://github.com/PSK76/Weather-search" target="_blank"
+          >Open source code,</a
+        >
+        by Priyanka</small
+      >
     </div>
     <script src="src/app.js"></script>
   </body>
