--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/style.css" />
-    <title>Vanilla Weather Search</title>
+    <title>Weather Search</title>
   </head>
   <body>
     <div class="container">
