Styled the temperature in CSS

--- a/index.html
+++ b/index.html
@@ -15,36 +15,47 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather app">
-        <h1>Edmonton</h1>
-        <ul>
-          <li>Friday 03:19</li>
-          <li>Cloudy</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="https://image.flaticon.com/icons/png/512/164/164806.png"
-              alt="cloudy"
-              width="50"
-            />
-            -3°C|°F
-          </div>
-          <div class="col-6">
-            <ul>
-              <li>Feels like:-8°</li>
-              <li>Humidity:60%</li>
-              <li>Wind:14km/hr</li>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>Edmonton</h1>
+            <ul class>
+              <li>Friday 03:19</li>
+              <li>Cloudy</li>
             </ul>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="d-flex weather-temperature">
+                <img
+                  src="https://image.flaticon.com/icons/png/512/164/164806.png"
+                  alt="cloudy"
+                  width="50"
+                  class="float-left"
+                />
+                <div class="float-left">
+                  <strong>-3</strong
+                  ><span class="units">°C|<a href="#">°F</a></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Feels like:-8°</li>
+                <li>Humidity:60%</li>
+                <li>Wind:14km/hr</li>
+              </ul>
+            </div>
+          </div>
         </div>
-      </div>
-      <small>
-        <a href="https://github.com/PSK76/Weather-search" target="_blank"
-          >Open source code,</a
+
+        <small>
+          <a href="https://github.com/PSK76/Weather-search" target="_blank"
+            >Open source code,</a
+          >
+          by Priyanka</small
         >
-        by Priyanka</small
-      >
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
