Updated time and current temperature

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
         </div>
 
         <small>
-          <a href="https://github.com/PSK76/Weather-search" target="_blank"
+          <a
+            href="https://github.com/PSK76/Weather-search"
+            target="_blank"
+            id="source-code"
             >Open source code,</a
           >
           by Priyanka</small
