Added relevant icon using API

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             <div class="col-6">
               <div class="d-flex weather-temperature">
                 <img
-                  src="https://image.flaticon.com/icons/png/512/164/164806.png"
+                  src=""
                   alt="cloudy"
+                  id="icon"
                   width="50"
                   class="float-left"
                 />
