Added link to Netlify

--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
             id="source-code"
             >Open source code,</a
           >
-          by Priyanka</small
+          by Priyanka & hosted on
+          <a href="https://boring-fermat-b6315b.netlify.app" target="_blank"
+            >Netlify</a
+          ></small
         >
       </div>
     </div>
