--- a/index.html
+++ b/index.html
@@ -75,6 +75,26 @@
                 <li>Wind:<span id="wind"></span>km/hr</li>
               </ul>
             </div>
+
+            <div class="view"></div>
+            <hr />
+
+            <div class="weather-forecast">
+              <div class="row">
+                <div class="col-2">
+                  <div class="weather-forecast-date">Wed</div>
+                  <img
+                    src="http://openweathermap.org/img/wn/02n@2x.png"
+                    width="50"
+                  />
+
+                  <div class="weather-forecast-temperature">
+                    <span class="weather-forecast-temperature-min"> -21°</span>
+                    <span class="weather-forecast-temperature-max">-24°</span>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
