--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="src/style.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
@@ -89,7 +90,14 @@
             id="source-code"
             >Open source code,</a
           >
-          by Priyanka & hosted on
+          by
+          <a
+            href="https://www.linkedin.com/in/priyanka-ganesh-950629206/"
+            target="_blank"
+          >
+            Priyanka
+          </a>
+          & hosted on
           <a href="https://boring-fermat-b6315b.netlify.app" target="_blank"
             >Netlify</a
           ></small
